kstyle: Take into account widget font when drawing QGroupBox

We do it when calculating the metrics but not when actually drawing
the widget, causing it to draw out of bounds when there's a custom font.

BUG: 498582